Css: Imported some Google Fonts and have styled the Top Main Menu accordingly. Added some extra spacing to avoid text being pushed down when hovering over a link. This has to find a better solution since the spacing now is too much. Added to ToDo.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,11 @@ body {
     max-width: 1920px;
     margin: auto;
     padding: 0;
-    font-size: var(--main-text-size);
-    font-family: var(--main-font-family);
-    color: var(--main-text-color);
-    background-color: var(--main-bg-color);
+    font-size: var(--text-mds);
+    font-family: var(--font-family-text);
+    color: var(--secondary-color-1);
+    font-weight: 400;
+    background-color: transparent;
 }
 
 p {
@@ -22,15 +23,13 @@ a {
     font-size: inherit;
     font-family: inherit;
     color: inherit;
+    font-weight: inherit;
 }
 
 a:hover {
-    font-size: inherit;
-    font-family: inherit;
-    color: inherit;
+    color: var(--logo-text-color);
     text-decoration: none;
 }
-
 
 h1 {
     font-size: var(--text-xxl);
@@ -39,15 +38,18 @@ h1 {
 }
 
 h2 {
-    font-size: var(--text-xl);
+    font-size: var(--text-lg);
     font-family: var(--font-family-headers);
     color: var(--primary-color-2);
+    font-weight: 400;
+    letter-spacing: 8px;
 }
 
 h3 {
-    font-size: var(--text-mdl);
+    font-size: var(--text-mds);
     font-family: var(--font-family-headers);
     color: var(--secondary-color-1);
+    font-weight: 400;
 }
 
 h4 {
@@ -120,13 +122,26 @@ main {
     margin: 0;
 }
 
+.row-top-bottom-padding {
+    padding: 10px 0;
+}
+
 .invisible {
     font-size: 0;
     background-color: transparent;
     position: absolute;
 }
 
+.plain-text {
+    font-size: var(--text-mds);
+    font-family: var(--font-family-text);
+    color: var(--secondary-color-1);
+    font-weight: 400;
+}
+
 /* ==== #2 - DropDown Menus =========================================== */
+
+
 
 .dropdown-custom {
     font-size: var(--text-md);
@@ -173,10 +188,10 @@ main {
     text-align:center;
     right: 75px;
     text-transform: uppercase;
-    letter-spacing: 5px;
+    letter-spacing: 10px;
     color: var(--menu-link-1-color);
     font-size: var( --menu-link-1-size);
-    font-family: var(--font-family-menus);
+    font-family: var(--font-family-link-button);
 }
 
 /* === #2 - Text Styles =============================================== */
@@ -231,23 +246,52 @@ main {
 }
 
 .logo-icon-small {
-    padding: 0 3px;
+    padding: 0 6px;
 }
 
 .logo-icon-large {
     padding: 0 10px;
 }
 
-.logotype {
-    font-family: var(--font-family-logotype);
+.logo-icon :hover {
+    color: var(--logo-icon-color);
 }
 
-.logotype-small {
+.logotype {
+    font-family: var(--font-family-logotype);
+    color: var(--logo-text-color);
+    letter-spacing: var(--logo-letter-spacing);
+    font-stretch: ultra-expanded;
+}
+
+.logotype .logotype-large :hover {
+    font-family: inherit;
+    color: inherit;
+    letter-spacing: inherit;
+}
+
+.logotype-medium {
+    font-size: var(--logo-medium-font-size);
+}
+
+.logotype-medium:after {
+    content: "Inc.";
+    padding-left: 5px;
     font-size: var(--logo-small-font-size);
+    letter-spacing: .1em;
 }
 
 .logotype-large {
-    font-size: 1em;
+   font-size: var(--logo-large-font-size);
+   font-weight: 500;
+   font-stretch: semi-expanded;
+}
+
+.logotype-large :hover {
+    font-family: var(--font-family-logotype);
+    font-size: var(--logo-large-font-size);
+    color: var(--logo-text-color);
+    letter-spacing: var(--logo-letter-spacing);
 }
 
 /* ==== #2 Header / Navbar ============================================ */
@@ -417,7 +461,7 @@ header {
     font-size: 2.2rem;
     color: var(--primary-color-14);
     letter-spacing: 10px;
-    font-weight: 300;
+    font-weight: 400;
     z-index: 3;
 }
 
@@ -435,7 +479,7 @@ header {
     font-size: 1.2rem;
     color: var(--primary-color-7);
     letter-spacing: 10px;
-    font-weight: 300;
+    font-weight: 400;
     z-index: 3;    
 }
 
